--- a/views/room.ejs
+++ b/views/room.ejs
@@ -23,6 +23,10 @@
         width: 100%;
         height: 100%;
         object-fit: cover;
+        -moz-transform: scaleX(-1);
+        -o-transform: scaleX(-1);
+        -webkit-transform: scaleX(-1);
+        transform: scaleX(-1);
       }
     </style>
 </head>
